feat[5]: Modif du sass de l'onglet profile + Ajout du changement d'icone User
Co écrit avec BriceVolpi

--- a/apps/workspace-ui/src/app/components/profile-tab/profile-tab.component.html
+++ b/apps/workspace-ui/src/app/components/profile-tab/profile-tab.component.html
@@ -1,23 +1,25 @@
-<!-- <aside>
-  <app-sidebar></app-sidebar>
-</aside> -->
-
 <div class="profile-settings-container">
 
   <!-- Profile Picture Section -->
   <section class="profile-picture">
     <div class="profile-text-container">
     <h2>Profile picture</h2>
-    <p>this setting lets you change your avatar for the curent organization(Tyria's heroes). You can also remove it to use default avatar (Initials of your fullname).</p>
+    <p>This setting lets you change your avatar for the curent organization(Tyria's heroes). You can also remove it to use default avatar (Initials of your fullname).</p>
+    </div>
+    <!-- Emplacement pour afficher l'image téléchargée -->
+    <div>
+      <img [src]="avatarSrc" *ngIf="avatarSrc" class="avatar-icon">
     </div>
     <div class="profile-picture-container">
-      <img src="avatar.png" alt="Profile picture">
       <p>Upload another avatar</p>
-      <input class= "frame" type="file">
+      <!-- Input pour télécharger une image -->
+      <input class="frame" type="file" accept="image/*,.pdf" (change)="onFileSelected($event)" >
       <p>Maximum file size allowed : 500KB</p>
     </div>
   </section>
 
+  <div class="separator-1"></div>
+  
   <!-- Localization Section -->
   <section class="localization">
     <div class="localization-text-container">
@@ -28,7 +30,8 @@
     <div class="div-timezone">
       <label for="timezone">Timezone</label>
       <div class="select-timezone">
-      <select  name="timezone" id="timezone">
+      <select  class="input_timezone" name="timezone" id="timezone">
+        <option value="" disabled selected>Select Timezone</option>
         <option value="Europe/Paris">Paris, France</option>
         <option value="America/New_York">New York, USA</option>
         <option value="Asia/Tokyo">Tokyo, Japan</option>
@@ -38,56 +41,60 @@
       </div>
     </div>
 
-
+    
       <div class="div-language">
-      <label for="language">Language</label>
-      <div class="select-language">
-      <select  name="language" id="language">
-        <option value="en">English</option>
-        <option value="fr">French</option>
-        <option value="ja">Japanese</option>
-        <!-- Additional language options -->
-      </select>
-      <p>Controls workspace language & default language for applications.</p>
-    </div>
+        <label for="language">Language</label>
+          <div class="select-language">
+            <select class="input_language" name="language" id="language" >
+              <option value="" disabled selected>Select language</option>
+              <option value="en">English</option>
+              <option value="fr">French</option>
+              <option value="ja">Japanese</option>
+              <!-- Additional language options -->
+            </select>
+          <p>Controls workspace language & default language for applications.</p>
+        </div>
     </div>
     </div>
   </section>
 
+  <div class="separator-1"></div>
+
   <!-- General Profile Settings Section -->
   <section class="frame-12">
     <div class="general-text-settings-container">
-    <h2 class="title-5 ">General profile settings</h2>
-    <p class="desc-3" >These informations are visible from the collaborators of your organization.</p>
+    <h2>General profile settings</h2>
+    <p>These informations are visible from the collaborators of your organization.</p>
     </div>
     <div class="general-profile-settings-container">
       <div class="fullname-grp-1 ">
         <label class="timezone-label-3" for="fullname">Fullname</label>
         <div>
-          <input class="rect-45" type="text" name="fullname" id="fullname" value="Chauncey Von Snuffies">
+          <input class="rect-45" type="text" name="fullname" id="fullname" placeholder=" Chauncey Von Snuffies">
         </div>
         <p class="desc-5">this is your name, display as is, so people can know who you are.</p>
       </div>
       <div class="email-grp-1 ">
         <label class="timezone-label-2" for="email">Email</label>
         <div>
-          <input type="email" name="email" id="email" value="chauncey.vonanulapi@divinityareacritics.com">
+          <input class="rect-45" type="email" name="email" id="email" placeholder=" Chauncey.vonanulapi@divinityareacritics.com">
         </div>
       </div> 
       <div class="general-job-title">
         <label for="jobtitle">Job title</label>
         
         <div>
-          <input type="text" name="jobtitle" id="jobtitle" value="The Notorious Cat of Divinity's Area Critics">
+          <input class="rect-45" type="text" name="jobtitle" id="jobtitle" placeholder=" The Notorious Cat of Divinity's Area Critics">
         </div>
       </div>
       <div class="general-bio">
-        <label for="bio">Bio</label>
-        <textarea id="bio"></textarea> <!-- Added Bio textarea -->
+        <div><label for="bio">Bio</label></div>
+      
+        <textarea class="bio"id="bio"></textarea> <!-- Added Bio textarea -->
       </div>
     </div>
   </section>
-  <span class="separator-1"></span>
+  <div class="separator-1"></div>
 
 </div>
 
