--- a/apps/workspace-ui/src/app/components/SideBar/side-bar.component.html
+++ b/apps/workspace-ui/src/app/components/SideBar/side-bar.component.html
@@ -62,7 +62,7 @@
       <nav class="sidebar-nav">
         <ul>
           <li>
-            <a href="#" onclick="sidebarProjects()">
+            <a id="projectsButton" onclick="sidebarProjects()">
               <span>Projects</span>
 
               <svg class="small_arrow_buttons" xmlns:xlink="http://www.w3.org/1999/xlink" fill="none" width="7.03" xmlns="http://www.w3.org/2000/svg" style="-webkit-print-color-adjust:exact" id="screenshot-07bfee2c-9922-11ed-86ae-6b73ddd7d7b4" version="1.1" viewBox="5103.985 214.985 7.03 11.03" height="11.03">
@@ -83,7 +83,7 @@
             </a>
           </li>
           <li>
-            <a href="#" onclick="sidebarCollab()">
+            <a id="collabButton" onclick="sidebarCollab()">
               <span class="hover">Collaborators</span>
 
               <svg class="small_arrow_buttons" xmlns:xlink="http://www.w3.org/1999/xlink" fill="none" width="7.03" xmlns="http://www.w3.org/2000/svg" style="-webkit-print-color-adjust:exact" id="screenshot-07bfee2c-9922-11ed-86ae-6b73ddd7d7b4" version="1.1" viewBox="5103.985 214.985 7.03 11.03" height="11.03">
@@ -112,9 +112,18 @@
       <ul>
         <li>
           <p>Recent projects</p>
+          <ul class="innerListNav-flyout">
+            <li>
+            </li>
+          </ul>
         </li>
         <li>
           <p>Projects</p>
+          <ul class="innerListNav-flyout">
+            <li>
+              
+            </li>
+          </ul>
         </li>
       </ul>
     </div>
@@ -124,12 +133,27 @@
       <ul>
         <li>
           <p>Recent interactions</p>
+          <ul class="innerListNav-flyout">
+            <li>
+              
+            </li>
+          </ul>
         </li>
         <li>
           <p>Users</p>
+          <ul class="innerListNav-flyout">
+            <li>
+              
+            </li>
+          </ul>
         </li>
         <li>
           <p>Groups</p>
+          <ul class="innerListNav-flyout">
+            <li>
+              
+            </li>
+          </ul>
         </li>
       </ul>
     </div>
