--- a/apps/workspace-ui/src/app/components/SideBar/side-bar.component.sass
+++ b/apps/workspace-ui/src/app/components/SideBar/side-bar.component.sass
@@ -86,8 +86,6 @@ h3,h2,h1,p
 
         &:hover
           background-color: #f79147
-          > .nav-flyout
-            display: block
 
       i
         font-size: 1.8em
@@ -136,8 +134,18 @@ h3,h2,h1,p
       font-size: 1.2em
       width: 85%
 
-      &:hover
-        background-color: rgba(0, 0, 0, 0.9)
+    .innerListNav-flyout
+      min-height: 15rem
+
+      li
+        margin-left: 1em
+        margin-right: 1em
+        margin-bottom: -0.5em
+
+        &:hover
+          background-color: #f79147
+          border-radius: 2em 2em 2em 2em
+
   
 
   h2
