--- a/apps/login-ui/src/app/core/pages/login-page/login-page.component.scss
+++ b/apps/login-ui/src/app/core/pages/login-page/login-page.component.scss
@@ -1,5 +1,5 @@
-@import '../../../styles/constants';
-@import '../../../styles/animations';
+@import '../../../../styles/constants';
+@import '../../../../styles/animations';
 
 :host {
   display: flex;
@@ -19,7 +19,6 @@
   flex-direction: column;
   min-width: 566px;
   width: 566px;
-  // border: 2px solid aquamarine;
 }
 
 .header {
@@ -50,8 +49,10 @@
 
   > .org-label {
     background-color: map-get($colors, primary-two);
+    color: map-get($colors, strong-emphasis);
     border-radius: 4px;
     margin-right: 11px;
+    font-size: 13px;
     cursor: help;
     > p {
       margin: 5px 9px;
@@ -102,39 +103,51 @@
     display: flex;
     margin-top: 6px;
     flex-direction: row;
+    column-gap: 10px;
     justify-content: space-between;
     align-items: center;
 
     > .lost-pass {
+      flex-wrap: nowrap;
+      flex-shrink: 0;
       margin-left: 11px;
       text-decoration: none;
+      background-color: transparent;
+      border: none;
+      cursor: pointer;
       color: map-get($colors, primary-three)
     }
-    
-    > .submit {
-      position: relative;
-      height: 34px;
-      width: 201px;
-      border: none;
-      border-radius: 4px;
-      background-color: map-get($colors, primary-three);
-      color: map-get($colors, light);
-      cursor: pointer;
 
-      > agamis-ws-login-svg-loading-spin {
-        visibility: hidden;
-        left: -45px;
-        width: 35px;
-        top: 0px;
-        position: absolute;
+    > div {
+      display: flex;
+      align-items: center;
+      column-gap: 10px;
+      > .error-msg {
+        color: map-get($colors, error);
+        text-align: right;
+        flex-grow: 0;
       }
 
-      &.loading {
-        background-color: map-get($colors, soft-emphasis);
+      > agamis-ws-login-svg-loading-spin {
+        height: 100%;
+        margin-right: 15px;
+        flex-shrink: 0;
+        animation: fadeIn 0.2s linear, spin 1s linear infinite;
+      }
 
-        > agamis-ws-login-svg-loading-spin {
-          visibility: visible;
-          animation: fadeIn 0.2s linear, spin 1s linear infinite;
+      > .submit {
+        height: 34px;
+        width: 201px;
+        flex-shrink: 0;
+        border: none;
+        border-radius: 4px;
+        background-color: map-get($colors, primary-three);
+        color: map-get($colors, light);
+        cursor: pointer;
+  
+        &:disabled {
+          background-color: map-get($colors, soft-emphasis);
+          cursor: progress;
         }
       }
     }
@@ -182,13 +195,21 @@
     row-gap: 9px;
     > a {
       cursor: pointer;
+      display: inline-flex;
+      justify-content: center;
+      font-size: 13px;
       flex-grow: 1;
       margin: 4px 0;
-      text-align: center;
       background-color: white;
       border: 1px solid map-get($colors, soft-emphasis);
       border-radius: 4px;
       padding: 9px 0;
+      > :first-child {
+        height: 14px;
+      }
+      > span {
+        margin-left: 4px;
+      }
     }
   }  
 }
