chore[5]:modif html

--- a/apps/workspace-ui/src/app/components/nav-bar/nav-bar.component.html
+++ b/apps/workspace-ui/src/app/components/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-s<!-- Partie NavBar -->
+<!-- Partie NavBar -->
 <nav class="custom-navbar">
   <!-- Section gauche de la barre de navigation : contient le logo et le titre -->
   <div class="navbar-left">
