--- a/apps/login-ui/src/app/core/pages/login-page/login-page.component.scss
+++ b/apps/login-ui/src/app/core/pages/login-page/login-page.component.scss
@@ -129,7 +129,7 @@
       }
 
       > agamis-ws-login-svg-loading-spin {
-        height: 100%;
+        height: 34px;
         margin-right: 15px;
         flex-shrink: 0;
         animation: fadeIn 0.2s linear, spin 1s linear infinite;
