--- a/apps/workspace-ui/src/styles.scss
+++ b/apps/workspace-ui/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'styles/base';
+
+html {
+    font-family: 'Poppins';
+    height: 100vh;
+    width: 100vw;
+}
+
+body {
+    height: 100%;
+    width: 100%;
+    background-color: #F5F1E4;
+}
