ci:gitlab CI passed

--- a/apps/workspace-ui/src/app/components/nav-bar/nav-bar.component.sass
+++ b/apps/workspace-ui/src/app/components/nav-bar/nav-bar.component.sass
@@ -234,7 +234,9 @@ $color-grey-light: #444 // Gris clair pour les bordures
   top: 15px
   background-color: rgba(245, 241, 228, 1)
 
-
+.icons
+  padding-right: 5px
+  
 .custom-tabs 
   display: flex
   justify-content: flex-start
