--- a/apps/workspace-ui/src/app/components/sidebar-tab/sidebar-tab.component.sass
+++ b/apps/workspace-ui/src/app/components/sidebar-tab/sidebar-tab.component.sass
@@ -96,7 +96,7 @@ $color-background: #646f6f
   border-radius: 50% 
   margin-right: 10px 
   
-a svg
+.icons
   padding-right: 5px
 
 // Media queries pour les écrans plus petits
