feat[5]: [ADD] Ajout des composants SVG

--- a/apps/workspace-ui/src/app/components/nav-bar/nav-bar.component.html
+++ b/apps/workspace-ui/src/app/components/nav-bar/nav-bar.component.html
@@ -3,14 +3,7 @@
   <!-- Section gauche de la barre de navigation : contient le logo et le titre -->
   <div class="navbar-left">
     <!-- Icône SVG du logo agamis -->
-  <svg xmlns:xlink="http://www.w3.org/1999/xlink" fill="none" width="27.093" xmlns="http://www.w3.org/2000/svg" style="-webkit-print-color-adjust:exact" id="screenshot-5df20b3b-9851-11ed-8aed-474d44167652" version="1.1" viewBox="2577.749 1257.853 27.093 31.294" height="31.294">
-    <g id="shape-5df20b3b-9851-11ed-8aed-474d44167652">
-      <g class="fills" id="fills-5df20b3b-9851-11ed-8aed-474d44167652">
-        <path class="cls-1" rx="0" ry="0" style="fill:#f5f1e4;fill-opacity:1" d="M2592.604,1289.147L2591.899,1287.882C2591.698,1287.525,2591.478,1287.179,2591.240,1286.845C2588.750,1283.257,2584.787,1280.969,2580.435,1280.604C2579.992,1280.567,2579.582,1280.547,2579.176,1280.547L2577.749,1280.547L2577.749,1266.453L2579.176,1266.453C2579.583,1266.453,2579.992,1266.435,2580.430,1266.396C2584.782,1266.029,2588.744,1263.743,2591.240,1260.159C2591.480,1259.828,2591.700,1259.481,2591.899,1259.123L2592.602,1257.853L2604.836,1264.916L2604.111,1266.155C2603.902,1266.508,2603.711,1266.872,2603.539,1267.244L2603.539,1267.257C2601.678,1271.207,2601.678,1275.781,2603.539,1279.731C2603.725,1280.135,2603.913,1280.496,2604.117,1280.845L2604.842,1282.084ZM2580.605,1277.754L2580.605,1277.754ZC2585.875,1278.191,2590.602,1280.922,2593.575,1285.203L2593.617,1285.264L2596.021,1283.885C2592.516,1278.715,2586.835,1275.436,2580.605,1274.988ZM2598.580,1264.608C2595.853,1270.229,2595.853,1276.789,2598.580,1282.410L2600.980,1281.015C2600.967,1280.988,2600.954,1280.960,2600.943,1280.934C2598.724,1276.220,2598.724,1270.763,2600.943,1266.050C2600.954,1266.028,2600.964,1266.005,2600.974,1265.984ZM2587.174,1273.505C2589.664,1274.424,2591.979,1275.762,2594.019,1277.459C2593.569,1274.842,2593.569,1272.168,2594.019,1269.551C2591.979,1271.248,2589.664,1272.585,2587.174,1273.505ZZM2580.605,1269.246L2580.605,1272.022C2586.835,1271.574,2592.516,1268.295,2596.021,1263.125L2593.619,1261.736L2593.566,1261.807C2590.589,1266.078,2585.864,1268.802,2580.605,1269.246ZZ">
-        </path>
-      </g>
-    </g>
-  </svg>
+    <app-svg-logo-agamis class="icons"></app-svg-logo-agamis>
     <h2>agamis</h2>
   </div>
 <!-- Barre de recherche -->
@@ -18,8 +11,8 @@
   <!-- Conteneur pour la barre de recherche -->
   <div class="search-container">
      <!-- Icône de recherche SVG à l'intérieur de la barre de recherche -->
-      <svg class="imageSearch" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18.031 16.6168L22.3137 20.8995L20.8995 22.3137L16.6168 18.031C15.0769 19.263 13.124 20 11 20C6.032 20 2 15.968 2 11C2 6.032 6.032 2 11 2C15.968 2 20 6.032 20 11C20 13.124 19.263 15.0769 18.031 16.6168ZM16.0247 15.8748C17.2475 14.6146 18 12.8956 18 11C18 7.1325 14.8675 4 11 4C7.1325 4 4 7.1325 4 11C4 14.8675 7.1325 18 11 18C12.8956 18 14.6146 17.2475 15.8748 16.0247L16.0247 15.8748Z"></path></svg>
-      <!-- Champ de saisie pour la recherche -->
+      <app-svg-image-search class="imageSearch"></app-svg-image-search>
+       <!-- Champ de saisie pour la recherche -->
       <input type="search" placeholder="Rechercher">
     </div>
   </form>
@@ -29,14 +22,7 @@
   <!-- Item pour 'Mon Entreprise' avec icône et texte -->
   <div class="nav-item">
       <a href="#" name="entreprise">
-        <svg xmlns:xlink="http://www.w3.org/1999/xlink" fill="none" width="24" xmlns="http://www.w3.org/2000/svg" style="-webkit-print-color-adjust:exact" id="screenshot-c4e44962-9942-11ed-86ae-6b73ddd7d7b4" version="1.1" viewBox="4104 1262 24 23" height="23">
-          <g id="shape-c4e44962-9942-11ed-86ae-6b73ddd7d7b4">
-            <g class="fills" id="fills-c4e44962-9942-11ed-86ae-6b73ddd7d7b4">
-              <path rx="0" ry="0" style="fill:#f5f1e4;fill-opacity:1" d="M4126.800,1285.000L4105.200,1285.000C4104.537,1285.000,4104.000,1284.428,4104.000,1283.722L4104.000,1274.122C4104.000,1273.753,4104.150,1273.402,4104.412,1273.159L4108.800,1269.084L4108.800,1263.278C4108.800,1262.572,4109.337,1262.000,4110.000,1262.000L4126.800,1262.000C4127.463,1262.000,4128.000,1262.572,4128.000,1263.278L4128.000,1283.722C4128.000,1284.428,4127.463,1285.000,4126.800,1285.000ZZM4112.400,1282.444L4116.000,1282.444L4116.000,1274.704L4111.200,1270.247L4106.400,1274.704L4106.400,1282.444L4110.000,1282.444L4110.000,1277.333L4112.400,1277.333L4112.400,1282.444ZZM4118.400,1282.444L4125.600,1282.444L4125.600,1264.556L4111.200,1264.556L4111.200,1267.273C4111.481,1267.273,4111.763,1267.378,4111.988,1267.589L4117.988,1273.159C4118.250,1273.402,4118.400,1273.753,4118.400,1274.122L4118.400,1282.444ZZM4120.800,1272.222L4123.200,1272.222L4123.200,1274.778L4120.800,1274.778L4120.800,1272.222ZZM4120.800,1277.333L4123.200,1277.333L4123.200,1279.889L4120.800,1279.889L4120.800,1277.333ZZM4120.800,1267.111L4123.200,1267.111L4123.200,1269.667L4120.800,1269.667L4120.800,1267.111ZZM4116.000,1267.111L4118.400,1267.111L4118.400,1269.667L4116.000,1269.667L4116.000,1267.111ZZ">
-              </path>
-            </g>
-          </g>
-        </svg>
+        <app-svg-logo-entreprise class="icons"></app-svg-logo-entreprise>
         <label for="entreprise">Mon Entreprise</label>
       </a>
     </div>
@@ -44,26 +30,7 @@
     <!-- Item pour 'Notifications' avec icône et texte -->
     <div class="nav-item">
       <a href="#" name="notif">
-        <svg xmlns:xlink="http://www.w3.org/1999/xlink" fill="none" width="32.52" xmlns="http://www.w3.org/2000/svg" style="-webkit-print-color-adjust:exact" id="screenshot-5df20b38-9851-11ed-8aed-474d44167652" version="1.1" viewBox="4275.943 1254.943 32.52 35.041" height="35.041">
-          <style data-loading="true">
-          </style>
-          <g id="shape-5df20b38-9851-11ed-8aed-474d44167652" rx="0" ry="0">
-            <g id="shape-5df20b4d-9851-11ed-8aed-474d44167652" style="fill:#000000" width="15.610418mm" version="1.1" height="18.77269mm" rx="0" ry="0">
-              <g id="shape-11861100-9947-11ed-86ae-6b73ddd7d7b4">
-                <g class="fills" id="fills-11861100-9947-11ed-86ae-6b73ddd7d7b4">
-                  <path rx="0" ry="0" style="fill:#f5f1e4;fill-opacity:1" d="M4288.997,1285.023L4276.000,1285.023L4277.022,1281.081C4277.022,1281.081,4279.576,1280.096,4279.576,1277.632C4279.576,1270.241,4279.576,1266.792,4282.130,1263.343C4285.194,1259.401,4289.792,1259.401,4289.792,1259.401L4292.346,1259.401C4292.346,1259.401,4296.943,1259.401,4300.008,1263.343C4302.562,1266.792,4302.562,1270.241,4302.562,1277.632C4302.562,1280.096,4305.116,1281.081,4305.116,1281.081L4306.138,1285.023L4293.136,1285.023L4294.643,1286.477L4291.067,1289.926L4287.490,1286.477L4288.997,1285.023ZM4289.500,1255.000L4292.500,1255.000L4292.500,1258.000L4289.500,1258.000L4289.500,1255.000Z">
-                  </path>
-                </g>
-                <g id="strokes-11861100-9947-11ed-86ae-6b73ddd7d7b4" class="strokes">
-                  <g class="stroke-shape">
-                    <path rx="0" ry="0" style="fill:none;fill-opacity:none;stroke-width:0.114331" d="M4288.997,1285.023L4276.000,1285.023L4277.022,1281.081C4277.022,1281.081,4279.576,1280.096,4279.576,1277.632C4279.576,1270.241,4279.576,1266.792,4282.130,1263.343C4285.194,1259.401,4289.792,1259.401,4289.792,1259.401L4292.346,1259.401C4292.346,1259.401,4296.943,1259.401,4300.008,1263.343C4302.562,1266.792,4302.562,1270.241,4302.562,1277.632C4302.562,1280.096,4305.116,1281.081,4305.116,1281.081L4306.138,1285.023L4293.136,1285.023L4294.643,1286.477L4291.067,1289.926L4287.490,1286.477L4288.997,1285.023ZM4289.500,1255.000L4292.500,1255.000L4292.500,1258.000L4289.500,1258.000L4289.500,1255.000Z">
-                    </path>
-                  </g>
-                </g>
-              </g>
-            </g>
-          </g>
-        </svg>
+        <app-svg-logo-notification ></app-svg-logo-notification>
         
       </a>
     </div>
@@ -79,10 +46,7 @@
             <p class="pseudo">Chauncey</p>
             <img *ngIf="avatarSrc; else defaultAvatar" [src]="avatarSrc" class="avatar-icon-nav">
             <ng-template #defaultAvatar>
-              <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 12C14.2091 12 16 10.2091 16 8C16 5.79086 14.2091 4 12 4C9.79086 4 8 5.79086 8 8C8 10.2091 9.79086 12 12 12Z"/>
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M4 20C4 16.134 7.13401 13 11 13H13C16.866 13 20 16.134 20 20V21H4V20Z"/>
-              </svg>
+              <app-svg-logo-user-default class="icons"></app-svg-logo-user-default>
             </ng-template>
             
           </div>
