--- a/apps/workspace-ui/src/app/components/sidebar-tab/sidebar-tab.component.html
+++ b/apps/workspace-ui/src/app/components/sidebar-tab/sidebar-tab.component.html
@@ -17,7 +17,7 @@
           
         </li>
         <li>
-          <a routerLink="/account" routerLinkActive="active"><!-- Shape: svg-path-11 -->
+          <a routerLink="/account-settings" routerLinkActive="active"><!-- Shape: svg-path-11 -->
             <app-svg-icone-account class="icons"></app-svg-icone-account>
             Account 
           </a>
