chore: integration composant

--- a/apps/workspace-ui/src/app/components/side-bar-menu/side-bar-menu.component.html
+++ b/apps/workspace-ui/src/app/components/side-bar-menu/side-bar-menu.component.html
@@ -3,7 +3,7 @@
     <aside class="sidebar">
         <header>
 
-          <svg xmlns:xlink="http://www.w3.org/1999/xlink" fill="none" width="125.968" xmlns="http://www.w3.org/2000/svg" style="-webkit-print-color-adjust:exact" id="screenshot-07bfee25-9922-11ed-86ae-6b73ddd7d7b4" version="1.1" viewBox="4917 98 125.968 31.294" height="31.294">
+          <svg (click)="closeSideMenu()"  xmlns:xlink="http://www.w3.org/1999/xlink" fill="none" width="125.968" xmlns="http://www.w3.org/2000/svg" style="-webkit-print-color-adjust:exact" id="screenshot-07bfee25-9922-11ed-86ae-6b73ddd7d7b4" version="1.1" viewBox="4917 98 125.968 31.294" height="31.294">
             <g id="shape-07bfee25-9922-11ed-86ae-6b73ddd7d7b4" rx="0" ry="0">
               <g id="shape-07bfee2d-9922-11ed-86ae-6b73ddd7d7b4" style="fill:#000000" rx="0" ry="0">
                 <g id="shape-07bfee2e-9922-11ed-86ae-6b73ddd7d7b4" style="fill:#000000" rx="0" ry="0">
