feat[29]: add style to page account settings

--- a/apps/workspace-ui/src/app/core/pages/account-setting/account-setting.component.scss
+++ b/apps/workspace-ui/src/app/core/pages/account-setting/account-setting.component.scss
@@ -36,10 +36,28 @@ section {
 .danger {
 	color: $color_1;
 }
+
 .delete_button {
 	background-color: $background-color_2;
 	color: $color_2;
 	padding: 5px;
 	border-radius: 5px;
 	border-style: none;
+}
+
+form {
+  display: flex;
+	flex-direction: column;
+}
+
+
+input {
+  width: 452px;
+  height: 31px;
+  border-radius: 5px;
+}
+
+
+p{
+  color: slategray;
 }
