feat[5]: Refactoring Scss nav bar

--- a/apps/workspace-ui/src/app/core/pages/nav-bar/nav-bar.component.html
+++ b/apps/workspace-ui/src/app/core/pages/nav-bar/nav-bar.component.html
@@ -14,7 +14,7 @@
      <!-- Icône de recherche SVG à l'intérieur de la barre de recherche -->
       <agamis-ws-svg-search class="imageSearch"></agamis-ws-svg-search>
        <!-- Champ de saisie pour la recherche -->
-      <input type="search" placeholder="Rechercher">
+      <input type="search" >
     </div>
   </form>
 
