--- a/apps/workspace-ui/src/app/core/pages/nav-bar/nav-bar.component.scss
+++ b/apps/workspace-ui/src/app/core/pages/nav-bar/nav-bar.component.scss
@@ -6,7 +6,6 @@
   align-items: center;
   background-color:map-get($colors, primary-one);
  
-  
   /* LOGO_AGAMIS */
   .logo-agamis {
    padding: 10px;
@@ -27,12 +26,26 @@
       }
 
       input[type="search"] {
-        padding: 8px 30px;
+        padding: 8px 30px 8px 15px;
         border: none;
+        outline: none;
         border-radius: 18px 18px 2px 18px;
         background-color: map-get($colors, light);
         color: map-get($colors,primary-one);
         width: 600px;
+        text-indent:25px;
+    
+      }
+      .clear-search{
+        position: absolute;
+        right: 10px; 
+        top: 50%;
+        transform: translateY(-50%);
+        border: none;
+        background: transparent;
+        font-size: 20px; 
+        cursor:pointer;
+        color: map-get($colors, primary-one);
       }
     }
   }
@@ -57,30 +70,7 @@
     }
   }
 
-  .custom-tabs {
-    display: flex;
-    justify-content: flex-start;
-    background-color: map-get($colors,soft-anchoring);
-
-    button {
-      background-color: map-get($colors,soft-emphasis);
-      border: none;
-      padding: 10px 20px;
-      cursor: pointer;
-      font-weight: bold;
-      color: map-get($colors,primary-one);
-
-      &.active {
-        background-color: map-get($colors,soft-anchoring);
-        color: map-get($colors,primary-one);
-      }
-    }
-  }
-
-  .tab-content {
-    background-color: map-get($colors,primary-two);
-  }
-
+  
   // Styles du menu déroulant de la nav-bar
   .nav-item {
     position: relative;
@@ -223,4 +213,5 @@
       margin-right: 10px;
     }
   }
+  
 }
